# Decision-Maker

./: .env.example  .gitignore  Mobile download link.txt  README.md  cli_error.txt  engine_error.txt  extract_docx.py  kb_error.txt  pyproject.toml  render.yaml  requirements.txt  run_dashboard.bat  test_results.txt  verify_dashboard.py  verify_phase2.py
.agent/context/: development.md  domain.md  project.md
.agent/knowledge/: analyzer.md  engine.md  interfaces.md  knowledge_base.md  matching_pipeline.md
.agent/planning/: phase2_async_ui_and_matching.md  phase3_mobile_and_phase4_analyzer.md
.agent/workflows/: post-phase-commit.md
data/: principles.yaml  sops.yaml  values.yaml
data/historical_situations/: example-vendor-negotiation.yaml
src/: __init__.py
src/analyzer/: __init__.py  historical_analyzer.py
src/domain/: __init__.py  principles.py  situations.py  sops.py  values.py
src/engine/: __init__.py  decision_engine.py  embeddings.py  matching.py  models.py
src/interfaces/: __init__.py  api.py  cli.py
src/interfaces/mobile/decision-mobile/: App.js  app.json  eas.json  package-lock.json  package.json
src/interfaces/mobile/decision-mobile/config/: env.js
src/interfaces/mobile/decision-mobile/screens/: AnalyzeScreen.js  HomeScreen.js  PrinciplesScreen.js
src/interfaces/mobile/decision-mobile/services/: api.js
src/interfaces/static/: app.js  index.html  style.css
src/knowledge/: __init__.py  knowledge_base.py
src/reporting/: __init__.py  generator.py
